--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -2,12 +2,12 @@
 nb:
   getting_married: Vi gifter oss!
   date: >
-      27. juli <br>
-      Spin kirke <br>
+      23. November <br>
+      Spind kirke <br>
       Kl 13.00
   info:
     title: Nyttig informasjon
     content: >
-      Dato: Lrdag 22.11.2014 <br>
+      Dato: Lørdag 23.11.2014 <br>
       Vielsen starter kl. 13:00 i Spind kirke i Farsund kommune. <br>
-      Festen fortsetter på Husan (Farsund sentrum). Drene åpnes kl. 16:00
+      Festen fortsetter på Husan (Farsund sentrum). Dørene åpnes kl. 16:00
