--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,7 +18,7 @@ en:
     _yes: Yes, I will
     _no: No, I will not
     accommodation: Need help with accommodation
-    send: Send
+    send: Submit
     note: 'Note: Submit for each family member'
     questions: >
       <p>
