--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -26,7 +26,7 @@ nb:
       </p>
       <dl class="inline">
         <dt>André:</dt> <dd>905 86 984</dd>
-        <dt>Lisas:</dt> <dd>97408453</dd>
+        <dt>Lisas:</dt> <dd>974 08 453</dd>
         <dt>Janne Bulæg:</dt> <dd>473 75 713</dd>
       </dl>
   wishlist:
